--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 										<span class="icon major fa-mobile"></span>
 										<h3>Habitry iOS</h3>
 										<p>A behavior change app for health coaches. Sold by Habitry  2014-2016.</p>
-										<a href="#" class="button fit">Learn More</a>
+										<a href="http://ganai.com/projects/habitryios/" class="button fit">Learn More</a>
 									</section>
 									<section>
 										<span class="icon major fa-graduation-cap"></span>
