--- a/index.html
+++ b/index.html
@@ -47,7 +47,9 @@
 												<li><a href="https://linkedin.com/in/omarganai/" class="icon fa-linkedin fa-2x"><span class="label">LinkedIn</span></a></li>
 												<li><a href="https://medium.com/@omarganai" class="icon fa-medium fa-2x"><span class="label">Medium</span></a></li>
 											</ul>
-											<a href="bio.html" class="button">Bio</a> <a href="/resume" class="button">Résumé</a>
+
+											<a href="/bio" class="button">Bio</a> 
+											<a href="/resume" class="button">Résumé</a>
 
 						</div>
 					</section>
