--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 												<li><a href="https://medium.com/@omarganai" class="icon fa-medium fa-2x"><span class="label">Medium</span></a></li>
 											</ul>
 
-											<a href="/bio" class="button">Bio</a> 
+											<a href="/bio" class="button">Bio</a>
 											<a href="/resume" class="button">Résumé</a>
 
 						</div>
@@ -64,7 +64,7 @@
 										<span class="icon major fa-rocket"></span>
 										<h3>Habitry</h3>
 										<p>Consulting for Practical Motivation Science to make better products.</p>
-										<a href="https://habitry.com" class="button fit">Visit Company Website</a>
+										<a href="https://habitry.com" class="button fit">Visit Company</a>
 										</ul>
 									</section>
 									<section>
