--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 						</div>
 					</section>
 
-					<!-- One -->
+					<!-- Projects -->
 						<section id="projects" class="wrapper style3 fade-up">
 							<div class="inner">
 								<h2>Select Projects</h2>
@@ -102,7 +102,7 @@
 							</div>
 						</section>
 
-				<!-- Two -->
+				<!-- Writing -->
 				<section id="writing" class="wrapper style2 spotlights">
 					<section>
 						<div class="content">
@@ -117,7 +117,7 @@
 							</div>
 						</section>
 
-						<!-- Three -->
+						<!-- Email -->
 							<section id="email" class="wrapper style1 fade-up">
 								<div class="inner">
 									<h2>Email</h2>
