--- a/projects/habitryios/index.html
+++ b/projects/habitryios/index.html
@@ -19,12 +19,11 @@
 
 		<!-- Header -->
 			<header id="header">
-				<a href="index.html" class="title">Hyperspace</a>
 				<nav>
 					<ul>
-						<li><a href="index.html">Home</a></li>
-						<li><a href="generic.html" class="active">Generic</a></li>
-						<li><a href="elements.html">Elements</a></li>
+						<li><a class="button small fit" href="../../">Home</a></li>
+						<li><a class="button small fit" href="../../#projects">Projects</a></li>
+						<li><a class="button special small fit" href="../../habitryios">Habitry iOS</a></li>
 					</ul>
 				</nav>
 			</header>
