--- a/projects/habitryios/index.html
+++ b/projects/habitryios/index.html
@@ -21,9 +21,9 @@
 			<header id="header">
 				<nav>
 					<ul>
-						<li><a class="button small fit" href="../../">Home</a></li>
-						<li><a class="button small fit" href="../../#projects">Projects</a></li>
-						<li><a class="button special small fit" href="../../habitryios">Habitry iOS</a></li>
+						<li><a href="../../">Home</a></li>
+						<li><a href="../../#projects">Projects</a></li>
+						<li><a class="active" href="../../habitryios">Habitry iOS</a></li>
 					</ul>
 				</nav>
 			</header>
@@ -34,7 +34,7 @@
 				<!-- Main -->
 					<section id="main" class="wrapper">
 						<div class="inner">
-							<h1 class="major">A Generic Page</h1>
+							<h1 class="major">Habitry iOS</h1>
 							<span class="image fit"><img src="images/pic04.jpg" alt="" /></span>
 							<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique.</p>
 							<p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fersapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique lorem ipsum dolor.</p>
@@ -44,13 +44,13 @@
 			</div>
 
 		<!-- Footer -->
-			<footer id="footer" class="wrapper alt">
-				<div class="inner">
-					<ul class="menu">
-						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-					</ul>
-				</div>
-			</footer>
+		<footer id="footer" class="wrapper style-alt">
+			<div class="inner">
+				<ul class="menu">
+					<li>Omar Ganai lives in Toronto, Canada. <img src="../../images/canada.png" width="22px" height="11px"></li>
+				</ul>
+			</div>
+		</footer>
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
