--- a/index.html
+++ b/index.html
@@ -77,25 +77,25 @@
 										<span class="icon major fa-graduation-cap"></span>
 										<h3>Habitry Professionals</h3>
 										<p>Habitry's education platform for health coaches. Sold by Habitry in 2016.</p>
-										<a href="#" class="button fit">Learn More</a>
+										<a href="http://ganai.com/projects/habitrypros/" class="button fit">Learn More</a>
 									</section>
 									<section>
 										<span class="icon major fa-university"></span>
 										<h3>Essentials of Habit Coaching</h3>
 										<p>A six-week digital learning program for coaches. Sold by Habitry in 2016.</p>
-										<a href="#" class="button fit">Learn More</a>
+										<a href="http://ganai.com/projects/essentials/" class="button fit">Learn More</a>
 									</section>
 									<section>
 										<span class="icon major fa-columns"></span>
 										<h3>The Motivator</h3>
 										<p>Habitry's research review of behavioral psychology. Sold by Habitry in 2017.</p>
-										<a href="#" class="button fit">Learn More</a>
+										<a href="http://ganai.com/projects/motivator/" class="button fit">Learn More</a>
 									</section>
 									<section>
 										<span class="icon major fa-book"></span>
 										<h3>Motivating Humans</h3>
 										<p>The science and lore of helping people stay motivated in a de-motivating world.</p>
-										<a href="#" class="button fit">Learn More</a>
+										<a href="http://ganai.com/projects/motivatinghumans/" class="button fit">Learn More</a>
 									</section>
 								</div>
 
