--- a/projects/habitryios/index.html
+++ b/projects/habitryios/index.html
@@ -24,7 +24,7 @@
 					<ul>
 						<li><a href="../../">Home</a></li>
 						<li><a href="../../#projects">Projects</a></li>
-						<li><a class="active" href="../../habitryios">Habitry iOS</a></li>
+						<li><a class="active" href="#">Habitry iOS</a></li>
 					</ul>
 				</nav>
 			</header>
