--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 						<div class="inner">
 							<img class="image" src="images/omar.jpg">
 							<h1>Omar Ganai</h1>
-							<p>I help companies define, design, and develop for behavior change with and within products, projects, programs, and policies.</p>
+							<p>I help companies define, design, and develop for behavior change with and within products, projects, and programs.</p>
 								<ul class="icons">
 												<li><a href="https://twitter.com/omarganai" class="icon fa-twitter fa-2x"><span class="label">Twitter</span></a></li>
 												<li><a href="https://github.com/OmarGanai" class="icon fa-github fa-2x"><span class="label">GitHub</span></a></li>
@@ -103,7 +103,7 @@
 						</section>
 
 				<!-- Writing -->
-				<section id="writing" class="wrapper style2 spotlights">
+				<section id="writing" class="wrapper style2 spotlights fade-up">
 					<section>
 						<div class="content">
 							<div class="inner">
