--- a/resume/index.html
+++ b/resume/index.html
@@ -45,7 +45,7 @@
 	    <section class="item">
 	        <h5 class="mb-6">Summary</h5>
 	          <div class="inline-flex justify-between w-full">
-	          <p class="text-justify">I help companies define, design, and develop for behavior change outcomes with and within products, projects, programs, and policies. I'm an expert in the practical application of Motivation & Behavior Change Science, Product/Project Management, and Data Analytics.</div>
+	          <p class="text-justify">I help companies define, design, and develop for behavior change outcomes with and within products, projects, and programs. I'm an expert in the practical application of Motivation & Behavior Change Science, Product/Project Management, and Data Analytics.</div>
 	    </section>
 	  <!-- Work -->
 	    <section class="item">
