--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 						</section>
 
 				<!-- Writing -->
-				<section id="writing" class="wrapper style2 spotlights fade-up">
+				<section id="writing" class="wrapper style2 spotlights">
 					<section>
 						<div class="content">
 							<div class="inner">
