--- a/projects/habitryios/index.html
+++ b/projects/habitryios/index.html
@@ -19,7 +19,7 @@
 
 		<!-- Header -->
 			<header id="header">
-				<a href="../" class="title">Omar Ganai</a>
+				<a href="../../" class="title">Omar Ganai</a>
 				<nav>
 					<ul>
 						<li><a href="../../">Home</a></li>
@@ -33,15 +33,57 @@
 			<div id="wrapper">
 
 				<!-- Main -->
-					<section id="main" class="wrapper">
+					<section id="main" class="wrapper style1 fullscreen">
 						<div class="inner">
 							<h1 class="major">Habitry iOS</h1>
-							<span class="image fit"><img src="../../images/pic04.jpg" alt="" /></span>
-							<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique.</p>
-							<p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fersapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique lorem ipsum dolor.</p>
+							<span class="image right"><img src="title.png" alt=""/></span>
+							<h2>A cutting-edge behavior change app for health coaches.</h2>
+							<a style="border-bottom:none;"href="#two"><i class="icon fas fa-arrow-down fa-2x"></i></a>
 						</div>
 					</section>
+					<section id="two" class="wrapper style1">
+						<div class="box">
+							<h2>In 2014, Omar joined <a href="http://habitry.com">Habitry</a> to make products for health coaches.</h2>
+							<p>It was immediately apparent that the most effective and effecient way to help clients change their health behavior is in groups. However health coaches had no tools to work in groups online that preserved their high-touch, one-on-one approach.</p>
+						</div>
+					</section>
+					<section id="three" class="wrapper style1">
+						<div class="box">
+							<span><img class="image right"src="discovery.jpg" alt=""/></span>
+							<h2>Discovery</h2>
+							<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. </p>
+							<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. </p>
+							<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. </p>
 
+						</div>
+					</section>
+					<section id="four" class="wrapper style1">
+						<div class="box">
+							<h2>Defintion</h2>
+							<img class="image left"src="vision.jpg" alt=""/>
+
+							<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. </p>
+							<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. </p>
+							<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. </p>						</div>
+					</section>
+					<section id="five" class="wrapper style1">
+						<div class="inner">
+							<h2>Design</h2>
+							<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. </p>
+						</div>
+					</section>
+					<section id="six" class="wrapper style1">
+						<div class="inner">
+							<h2>Development</h2>
+							<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. </p>
+						</div>
+					</section>
+					<section id="seven" class="wrapper style1">
+						<div class="inner">
+							<h2>Results</h2>
+							<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. </p>
+						</div>
+					</section>
 			</div>
 
 		<!-- Footer -->
