--- a/projects/habitrypros/index.html
+++ b/projects/habitrypros/index.html
@@ -19,7 +19,7 @@
 
 		<!-- Header -->
 			<header id="header">
-				<a href="../" class="title">Omar Ganai</a>
+				<a href="../../" class="title">Omar Ganai</a>
 				<nav>
 					<ul>
 						<li><a href="../../">Home</a></li>
