--- a/projects/habitryios/index.html
+++ b/projects/habitryios/index.html
@@ -28,27 +28,255 @@
 					</ul>
 				</nav>
 			</header>
+			<!-- Wrapper -->
+				<div id="wrapper">
 
-		<!-- Wrapper -->
-			<div id="wrapper">
+						<!-- Main -->
+							<section id="main" class="wrapper style1 fullscreen">
+								<div class="inner">
+									<h1 class="major">Habitry iOS</h1>
+									<span class="image right"><img src="title.png" alt=""/></span>
+									<h2>A cutting-edge behavior change app for health coaches.</h2>
+									<a style="border-bottom:none;"href="#mission"><i class="icon fas fa-arrow-down fa-2x"></i></a>
+								</div>
+							</section>
 
-				<!-- Main -->
-					<section id="main" class="wrapper style1 fullscreen">
-						<div class="inner">
-							<h1 class="major">Habitry iOS</h1>
-							<span class="image right"><img src="title.png" alt=""/></span>
-							<h2>A cutting-edge behavior change app for health coaches.</h2>
-							<a style="border-bottom:none;"href="#two"><i class="icon fas fa-arrow-down fa-2x"></i></a>
+							<section id="mission" class="wrapper style1">
+								<div class="inner">
+								<div class="row">
+											<!-- Text -->
+												<div class="3u">
+												<span class="image fit"><img src="habitry-logo.png" width=alt=""/></span>
+											 </div>
+											 <div class="9u$">
+													 <h2>The Mission</h2>
+													 <p>In 2014, Omar joined <a href="http://habitry.com">Habitry</a> to work on our mission of <b>"helping the most people to help the most people"</b> by making products for health coaches.</p>
+
+													 <p>Our central hypothesis was that the most effective and efficient way to help clients change their health behavior was in groups. However health coaches had no tools to work in groups online that preserved their high-touch, one-on-one approach.</p>
+											 </div>
+								</div>
+								<hr>
+
+							</div>
+							</section>
+
+							<section id="two" class="wrapper style1 fade-up">
+								<div class="inner">
+								<div class="row">
+											<!-- Text -->
+											<div class="6u">
+													<h2>A Motivation Design Problem</h2>
+													<p>Most health coaches: "I  need  to  coach  more  people,  but  I’m  exhausted  and  have  no  way  to  scale  my  business.”</p>
+													<p>Most people who seek health & fitness: "Apps  are  convenient,  but  they  don’t  keep  me  motivated.  If  only  there  was  a  way  to  hire  an  expert  I  trust  to  keep  me  motivated  with  the  convenience  of  an  app.”</p>
+											</div>
+												<div class="6u$">
+												<span class="image titleimg fit"><img src="discovery.jpg" alt=""/></span>
+											 </div>
+								</div>
+							</div>
+							</section>
+
+							<section id="three" class="wrapper style3">
+								<div class="box">
+									<h2>What if there was a way to scale coaching so more health coaches could help more clients, with the convenience of an app?</h2>
+								</div>
+
+							</section>
+
+							<section id="three" class="wrapper style1">
+								<div class="inner">
+								<div class="row">
+											<!-- Text -->
+												<div class="3u">
+												<span class="image titleimg fit"><img src="vision.jpg" width=alt=""/></span>
+											 </div>
+											 <div class="9u$">
+													 <h2>The Approach</h2>
+													 <p>Habitry took a Lean UX approach to figuring out potential customer pain points, potential solutions, and how to measure the results. This meant front-loading a lot of hypothesis testing with rapid prototyping, customer interviews, and mock ups.</p>
+											 </div>
+								</div>
+								<hr>
+							</div>
+							</section>
+
+							<section id="three" class="wrapper style1">
+								<div class="inner">
+								<div class="row">
+											<!-- Text -->
+												<div class="3u">
+												<span class="image titleimg fit"><img src="motivatenyc.jpg" width=alt=""/></span>
+											 </div>
+											 <div class="9u$">
+													 <h2>Discovery</h2>
+													 <p>On the advice of Angel Investor <a href="https://www.wikiwand.com/en/Jesse_Robbins">Jesse Robbins</a>, Habitry started a series of <a href="https://www.wikiwand.com/en/Unconference">Unconferences</a> — <b><a href="http://www.motivatesumm.it">The Motivate Summits</a></b> — as a cheap way to surface customer problems and workshop solutions.</p>
+													 <p>These open, unscripted gatherings proved to be a fertile ground for exploring the non-technical approaches that health coaches were using, and the great lengths to which they were going to scale their businesses into "the other 167 hours" a week they were not with their clients.</p>
+													 <p>We also conducted interviews with clients working with health coaches and people using health coaching apps in lieu of hiring a coach.</p>
+											 </div>
+								</div>
+								<hr>
+							</div>
+							</section>
+
+							<section id="three" class="wrapper style1">
+								<div class="inner">
+								<div class="row">
+											<!-- Text -->
+												<div class="3u">
+													<h2>Design Strategy</h2>
+												</div>
+											 <div class="9u$">
+												 <h3> Designing for motivation and behavior change.</h3>
+
+												 <p>Using notes from this process, we conducted a <b><a href="https://www.researchgate.net/publication/51070630_The_Behaviour_Change_Wheel_a_new_method_for_characterising_and_designing_behaviour_change_interventions">behavioral analysis</a></b> to examine barriers and opportunities to motivate coaches to take action and maximize value from our product.</p>
+												 										<table>
+												 											<tbody>
+												 												<tr>
+												 													<td>PSYCHOLOGICAL CAPABILITY</td>
+												 													<td>Coaches lacked information on how to facilitate habit formation in clients. This reduced their confidence in helping clients with behavior change.</td>
+												 												</tr>
+												 												<tr>
+																									<td>REFLECTIVE MOTIVATION</td>
+																									<td>Coaches needed to believe in the value of the Habitry iOS app in order to use it to promote habit formation with clients.</td>
+																								</tr>
+												 												<tr>
+												 													<td>AUTOMATIC MOTIVATION</td>
+												 													<td>Coaches needed to experience success in each session with the app to keep using it.</td>
+												 												</tr>
+												 												<tr>
+												 													<td>PHYSICAL OPPORTUNITY</td>
+												 													<td>Coaches needed enough time in their daily schedule to launch and maintain clients groups on Habitry iOS.</td>
+												 												</tr>
+																								<td>SOCIAL OPPORTUNITY</td>
+																								<td>Coaches needed a community of peers to support their motivation to keep using the Habitry iOS app.</td>
+																							</tr>
+												 											</tbody>
+												 										</table>
+
+											 </div>
+								</div>
+								<hr>
+
+							</div>
+							</section>
+
+							<section id="five" class="wrapper style3 fade-up">
+								<div class="inner">
+								<div class="row">
+											<!-- Text -->
+											<div class="6u">
+													<h2>Design Tactics</h2>
+													<p>Our design tactics were to increase Capability, Motivation, and Opportunity by selecting appropriate <b><a href="https://www.researchgate.net/publication/236064731_The_Behavior_Change_Technique_Taxonomy_v1_of_93_Hierarchically_Clustered_Techniques_Building_an_International_Consensus_for_the_Reporting_of_Behavior_Change_Interventions">Behavior Change Techniques</a>.</b></p>
+
+											</div>
+												<div class="6u$">
+												<span class="image titleimg fit"><img src="designingasystem.png" alt=""/></span>
+											 </div>
+								</div>
+							</div>
+						</section>
+
+							<section id="three" class="wrapper style1">
+								<div class="inner">
+								<div class="row">
+											<!-- Text -->
+												<div class="3u">
+												<span class="image fit"><img src="habit-1.png" width=alt=""/></span>
+											 </div>
+											 <div class="9u$">
+													 <h2>Improving Capability</h2>
+													<p>We helped coaches support client habit formation by automating the behavior change techniques of Goal-Setting, Action Planning, Behavioral Contracts, Feedback on Behavior, Self-Monitoring of Behavior, and Push Notifications (aka the behavior change technique of "Prompts"). </p>
+													<p>We educated coaches on how to create Positive Motivational Climates in their groups with the use of Autonomy Support, Competence Support, and Relatedness Support. This later became our <a href="../essentials">Essentials of Habit Coaching</a> product.</p></p>
+											 </div>
+								</div>
+								<hr>
+							</div>
+							</section>
+
+							<section id="three" class="wrapper style1">
+								<div class="inner">
+								<div class="row">
+											<!-- Text -->
+												<div class="3u">
+												<span class="image  fit"><img src="habit-2.png" width=alt=""/></span>
+											 </div>
+											 <div class="9u$">
+													 <h2>Improving Motivation</h2>
+													<p>We helped coaches to get started with as little fuss as possible by designing a great onboarding experience (Shaping Knowledge, Goal-Setting, Valued Self-Identity), habits to use with clients (Shaping Knowledge), and an analytics system that generated insights (Feedback on Behavior & Re-attrbition) so they could better manage their groups.</p>
+											 </div>
+								</div>
+								<hr>
+							</div>
+							</section>
+
+							<section id="three" class="wrapper style1">
+								<div class="inner">
+								<div class="row">
+											<!-- Text -->
+												<div class="3u">
+												<span class="image titleimg fit"><img src="motivatenyc2.jpg" width=alt=""/></span>
+											 </div>
+											 <div class="9u$">
+													 <h2>Improving Opportunity</h2>
+													<p>We created the Motivate Collective to provide Social Support, Shape Knowledge, and create a Valued Self-Identity for health coaches as <b>Motivators</b>. At it's peak, there were 600+ members in the Motivate Collective.</p>
+											 </div>
+								</div>
+								<hr>
+							</div>
+							</section>
+
+							<section id="three" class="wrapper style1">
+								<div class="inner">
+								<div class="row">
+											<!-- Text -->
+												<div class="3u">
+												<span class="image titleimg fit"><img src="push.jpg" width=alt=""/></span>
+											 </div>
+											 <div class="9u$">
+													 <h2>A Killer Feature</h2>
+													<p>In testing, it became obvious that the make-or-break feature of the mobile app woud be push notifications. Coaches and their clients had both mentioned them frequently in discovery, and in 2014 people weren't quite sick of them yet.</p>
+													<p>In order to make sure we got it right, Omar looked at the research on creating motivating push notifications from Self-Determination Theory. Then he went a step further and recreated one of the study protocols. He and Steven M. Ledbetter wrote about the lessons from this experiment in <a href="http://habitry.link/push">How to Design Motivating Push Notifications.</a></p>
+											 </div>
+								</div>
+								<hr>
+							</div>
+							</section>
+
+
+							<section id="three" class="wrapper style1">
+								<div class="inner">
+								<div class="row">
+											<!-- Text -->
+												<div class="4u">
+													<h2>Product</h2>
+												</div>
+											 <div class="8u$">
+												 <iframe width="560" height="315" src="https://www.youtube.com/embed/qxDGcA4vSX4?showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+											 </div>
+								</div>
+								<hr>
+
+							</div>
+							</section>
+							<section id="three" class="wrapper style1">
+								<div class="inner">
+								<div class="row">
+											<!-- Text -->
+												<div class="4u">
+													<h2>Results</h2>
+												</div>
+											 <div class="8u$">
+												 <p>At it's peak, Habitry iOS had more than 1,000 users on the platform. Health coaches were making an average of $3,000 per month on the app and clients were checking in with 72% daily adherence and 68% stuck around for a full 365 days.</p>
+												 <iframe width="560" height="315" src="https://www.youtube.com/embed/MK0PZ2uAd9E" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+
+											 </div>
+								</div>
+								<hr>
+
+							</div>
+							</section>
+
 						</div>
-					</section>
-					<section id="two" class="wrapper style1">
-						<div class="box">
-							<h2>In 2014, Omar joined <a href="http://habitry.com">Habitry</a> to make products for health coaches.</h2>
-							<p>It was immediately apparent that the most effective and effecient way to help clients change their health behavior is in groups. However health coaches had no tools to work in groups online that preserved their high-touch, one-on-one approach.</p>
-						</div>
-					</section>
-				
-			</div>
+
 
 		<!-- Footer -->
 		<footer id="footer" class="wrapper style-alt">
