--- a/projects/habitryios/index.html
+++ b/projects/habitryios/index.html
@@ -234,7 +234,7 @@
 											 <div class="9u$">
 													 <h2>A Killer Feature</h2>
 													<p>In testing, it became obvious that the make-or-break feature of the mobile app woud be push notifications. Coaches and their clients had both mentioned them frequently in discovery, and in 2014 people weren't quite sick of them yet.</p>
-													<p>In order to make sure we got it right, Omar looked at the research on creating motivating push notifications from Self-Determination Theory. Then he went a step further and recreated one of the study protocols. He and Steven M. Ledbetter wrote about the lessons from this experiment in <a href="http://habitry.link/push">How to Design Motivating Push Notifications.</a></p>
+													<p>In order to make sure we got it right, Omar looked at the research on creating motivating push notifications from Self-Determination Theory. Then he went a step further and recreated one of the study protocols. He and Steven M. Ledbetter wrote about the lessons from this experiment in <b><a href="http://habitry.link/push">How to Design Motivating Push Notifications.</a></b></p>
 											 </div>
 								</div>
 								<hr>
