--- a/projects/habitryios/index.html
+++ b/projects/habitryios/index.html
@@ -46,7 +46,7 @@
 								<div class="row">
 											<!-- Text -->
 												<div class="3u">
-												<span class="image fit"><img src="habitry-logo.png" width=alt=""/></span>
+												<span class="image"><img src="habitry-logo.png" width=alt=""/></span>
 											 </div>
 											 <div class="9u$">
 													 <h2>The Mission</h2>
@@ -70,7 +70,7 @@
 													<p>Most people who seek health & fitness: "Apps  are  convenient,  but  they  don’t  keep  me  motivated.  If  only  there  was  a  way  to  hire  an  expert  I  trust  to  keep  me  motivated  with  the  convenience  of  an  app.”</p>
 											</div>
 												<div class="6u$">
-												<span class="image titleimg fit"><img src="discovery.jpg" alt=""/></span>
+												<span class="image titleimg"><img src="discovery.jpg" alt=""/></span>
 											 </div>
 								</div>
 							</div>
@@ -88,7 +88,7 @@
 								<div class="row">
 											<!-- Text -->
 												<div class="3u">
-												<span class="image titleimg fit"><img src="vision.jpg" width=alt=""/></span>
+												<span class="image titleimg"><img src="vision.jpg" width=alt=""/></span>
 											 </div>
 											 <div class="9u$">
 													 <h2>The Approach</h2>
@@ -104,7 +104,7 @@
 								<div class="row">
 											<!-- Text -->
 												<div class="3u">
-												<span class="image titleimg fit"><img src="motivatenyc.jpg" width=alt=""/></span>
+												<span class="image titleimg"><img src="motivatenyc.jpg" width=alt=""/></span>
 											 </div>
 											 <div class="9u$">
 													 <h2>Discovery</h2>
@@ -169,7 +169,7 @@
 
 											</div>
 												<div class="6u$">
-												<span class="image titleimg fit"><img src="designingasystem.png" alt=""/></span>
+												<span class="image titleimg"><img src="designingasystem.png" alt=""/></span>
 											 </div>
 								</div>
 							</div>
@@ -180,7 +180,7 @@
 								<div class="row">
 											<!-- Text -->
 												<div class="3u">
-												<span class="image fit"><img src="habit-1.png" width=alt=""/></span>
+												<span class="image"><img src="habit-1.png" width=alt=""/></span>
 											 </div>
 											 <div class="9u$">
 													 <h2>Improving Capability</h2>
@@ -197,7 +197,7 @@
 								<div class="row">
 											<!-- Text -->
 												<div class="3u">
-												<span class="image  fit"><img src="habit-2.png" width=alt=""/></span>
+												<span class="image"><img src="habit-2.png" width=alt=""/></span>
 											 </div>
 											 <div class="9u$">
 													 <h2>Improving Motivation</h2>
@@ -213,7 +213,7 @@
 								<div class="row">
 											<!-- Text -->
 												<div class="3u">
-												<span class="image titleimg fit"><img src="motivatenyc2.jpg" width=alt=""/></span>
+												<span class="image titleimg"><img src="motivatenyc2.jpg" width=alt=""/></span>
 											 </div>
 											 <div class="9u$">
 													 <h2>Improving Opportunity</h2>
@@ -229,7 +229,7 @@
 								<div class="row">
 											<!-- Text -->
 												<div class="3u">
-												<span class="image titleimg fit"><img src="push.jpg" width=alt=""/></span>
+												<span class="image titleimg"><img src="push.jpg" width=alt=""/></span>
 											 </div>
 											 <div class="9u$">
 													 <h2>A Killer Feature</h2>
