--- a/projects/habitryios/index2.html
+++ b/projects/habitryios/index2.html
@@ -41,6 +41,7 @@
 					</div>
 					<hr>
 				</section>
+
 					<section id="mission" class="wrapper style1">
 						<div class="inner">
 							<h2>The Mission</h1>
@@ -51,14 +52,23 @@
 							<p>Our central hypothesis was that the most effective and efficient way to help clients change their health behavior was in groups. However health coaches had no tools to work in groups online that preserved their high-touch, one-on-one approach.</p>
 						</div>
 					</section>
-					
-					<section id="mission" class="wrapper style1">
-						<div class="inner">
-							<span class="image titleimg right"><img src="discovery.jpg" alt=""/></span>
+
+					<section class="wrapper style1">
+						<div class="inner style1">
+							<span class="image right fit titleimg"><img src="discovery.jpg" alt=""/></span>
+
 							<h2>A Motivation Design Problem</h2>
 							<p>Most health coaches: "I  need  to  coach  more  people,  but  I’m  exhausted  and  have  no  way  to  scale  my  business.”</p>
 							<p>Most people who seek health & fitness: "Apps  are  convenient,  but  they  don’t  keep  me  motivated.  If  only  there  was  a  way  to  hire  an  expert  I  trust  to  keep  me  motivated  with  the  convenience  of  an  app.”</p>
+							<br><br><br><br>
 						</div>
+					</section>
+
+					<section id="three" class="wrapper style3">
+						<div class="box">
+							<h2>What if there was a way to scale coaching so more health coaches could help more clients, with the convenience of an app?</h2>
+						</div>
+
 					</section>
 
 
