--- a/projects/habitryios/index2.html
+++ b/projects/habitryios/index2.html
@@ -78,7 +78,7 @@
   			<footer id="footer" class="wrapper style1">
   				<div class="inner">
   					<ul class="menu">
-  						<li>Omar Ganai lives in Toronto, Canada. <img src="../images/canada.png" width="22px" height="11px"></li>
+  						<li>Omar Ganai lives in Toronto, Canada. <img src="../../images/canada.png" width="22px" height="11px"></li>
   					</ul>
   				</div>
   			</footer>
