--- a/projects/habitryios/index2.html
+++ b/projects/habitryios/index2.html
@@ -55,7 +55,7 @@
 
 					<section class="wrapper style1">
 						<div class="inner style1">
-							<span class="image right fit titleimg"><img src="discovery.jpg" alt=""/></span>
+							<span class="image right titleimg"><img src="discovery.jpg" alt=""/></span>
 
 							<h2>A Motivation Design Problem</h2>
 							<p>Most health coaches: "I  need  to  coach  more  people,  but  I’m  exhausted  and  have  no  way  to  scale  my  business.”</p>
@@ -63,8 +63,9 @@
 						</div>
 					</section>
 
-					<section id="three" class="wrapper style3">
-						<div class="box">
+					<section id="three" class="wrapper style1">
+						<div class="inner"</div>
+						<div style="background-color: #b74e91;" class="box">
 							<h2>What if there was a way to scale coaching so more health coaches could help more clients, with the convenience of an app?</h2>
 						</div>
 
