--- a/projects/habitryios/index2.html
+++ b/projects/habitryios/index2.html
@@ -44,8 +44,8 @@
 
 					<section id="mission" class="wrapper style1">
 						<div class="inner">
-							<h2>The Mission</h1>
 							<span class="image left "><img src="habitry-logo.png" width=alt=""/></span>
+							<h2>The Mission</h1>
 
 							<p>In 2014, Omar teamed up with <a href="http://habitry.com">Habitry</a> co-founders Steven M. Ledbetter and Vanessa Naylon to work on our mission of <b>"helping the most people to help the most people"</b> by making products for health coaches.</p>
 
@@ -55,7 +55,7 @@
 
 					<section class="wrapper style1">
 						<div class="inner style1">
-							<span class="image right titleimg"><img src="discovery.jpg" alt=""/></span>
+							<span class="image left titleimg"><img src="discovery.jpg" alt=""/></span>
 
 							<h2>A Motivation Design Problem</h2>
 							<p>Most health coaches: "I  need  to  coach  more  people,  but  I’m  exhausted  and  have  no  way  to  scale  my  business.”</p>
@@ -63,17 +63,31 @@
 						</div>
 					</section>
 
-					<section id="three" class="wrapper style1">
+					<section class="wrapper style1">
 						<div class="inner"</div>
 						<div style="background-color: #b74e91;" class="box">
 							<h2>What if there was a way to scale coaching so more health coaches could help more clients, with the convenience of an app?</h2>
 						</div>
-
 					</section>
 
+					<section  class="wrapper style1">
+						<div class="inner">
+							<span class="image titleimg left "><img src="vision.jpg" width=alt=""/></span>
+							<h2>The Approach</h2>
 
+							<p>Habitry took a Lean UX approach to figuring out potential customer pain points, potential solutions, and how to measure the results.</p>
+							<p>This meant front-loading a lot of hypothesis testing with rapid prototyping, customer interviews, and mock ups.</p>
+					</div>
+					</section>
+					<section  class="wrapper style1">
+						<div class="inner">
+							<span class="image titleimg left "><img src="motivatenyc.jpg" width=alt=""/></span>
+							<h2>Discovery</h2>
 
-			</div>
+							<p>On the advice of Angel Investor <a href="https://www.wikiwand.com/en/Jesse_Robbins">Jesse Robbins</a>, Habitry started a series of <a href="https://www.wikiwand.com/en/Unconference">Unconferences</a> — <b><a href="http://www.motivatesumm.it">The Motivate Summits</a></b> — as a cheap way to surface customer problems and workshop solutions. These open, unscripted gatherings proved to be a fertile ground for exploring the non-technical approaches that health coaches were using, and the great lengths to which they were going to scale their businesses into "the other 167 hours" a week they were not with their clients.</p>
+							<p>We also conducted interviews with clients working with health coaches and people using health coaching apps in lieu of hiring a coach.</p>
+					</div>
+					</section>
 
       <!-- Footer -->
   			<footer id="footer" class="wrapper style1">
