--- a/projects/habitryios/index2.html
+++ b/projects/habitryios/index2.html
@@ -42,7 +42,7 @@
 
 				</section>
 
-					<section id="mission" class="wrapper style1 fullscreen">
+					<section id="mission" class="wrapper style1">
 						<div class="inner">
 							<span class="image left "><img src="habitry-logo.png" width=alt=""/></span>
 							<h2>The Mission</h1>
@@ -55,7 +55,7 @@
 
 					</section>
 
-					<section id="motivationproblem" class="wrapper style1 fullscreen">
+					<section id="motivationproblem" class="wrapper style1">
 						<div class="inner style1">
 							<span class="image left titleimg"><img src="discovery.jpg" alt=""/></span>
 
@@ -65,7 +65,7 @@
 						</div>
 					</section>
 
-					<section class="wrapper style1 fullscreen">
+					<section class="wrapper style1">
 						<div class="inner"</div>
 						<div style="background-color: #b74e91;" class="box">
 							<h2>What if there was a way to scale coaching so more health coaches could help more clients, with the convenience of an app?</h2>
@@ -73,7 +73,7 @@
 
 					</section>
 
-					<section  class="wrapper style1 fullscreen">
+					<section  class="wrapper style1">
 						<div class="inner">
 							<span class="image titleimg left "><img src="vision.jpg" width=alt=""/></span>
 							<h2>The Approach</h2>
@@ -83,7 +83,7 @@
 					</div>
 					</section>
 
-					<section  class="wrapper style1 fullscreen">
+					<section  class="wrapper style1">
 						<div class="inner">
 							<span class="image titleimg left "><img src="motivatenyc.jpg" width=alt=""/></span>
 							<h2>Discovery</h2>
