--- a/projects/habitryios/index2.html
+++ b/projects/habitryios/index2.html
@@ -88,20 +88,62 @@
 							<span class="image titleimg left "><img src="motivatenyc.jpg" width=alt=""/></span>
 							<h2>Discovery</h2>
 
-							<p>On the advice of Angel Investor <a href="https://www.wikiwand.com/en/Jesse_Robbins">Jesse Robbins</a>, Habitry started a series of <a href="https://www.wikiwand.com/en/Unconference">Unconferences</a> — <b><a href="http://www.motivatesumm.it">The Motivate Summits</a></b> — as a cheap way to surface customer problems and workshop solutions. These open, unscripted gatherings proved to be a fertile ground for exploring the non-technical approaches that health coaches were using, and the great lengths to which they were going to scale their businesses into "the other 167 hours" a week they were not with their clients.</p>
+							<p>On the advice of Angel Investor <a href="https://www.wikiwand.com/en/Jesse_Robbins">Jesse Robbins</a>, Habitry started a series of <a href="https://www.wikiwand.com/en/Unconference">Unconferences</a> — <b><a href="http://www.motivatesumm.it">The Motivate Summits</a></b>. These open, unscripted gatherings proved to be a fertile ground for exploring the non-technical approaches that health coaches were using, and the great lengths to which they were going to scale their businesses into "the other 167 hours" a week they were not with their clients.</p>
 							<p>We also conducted interviews with clients working with health coaches and people using health coaching apps in lieu of hiring a coach.</p>
 					</div>
 					</section>
 
 					<section  class="wrapper style1">
 						<div class="inner">
-							<span class="image titleimg left "><img src="motivatenyc.jpg" width=alt=""/></span>
-							<h2>Discovery</h2>
+							<h2>Design for Motivation & Behavior Change</h2>
+							<span class="image titleimg"><img src="designingasystem.png" alt=""/></span>
 
-							<p>On the advice of Angel Investor <a href="https://www.wikiwand.com/en/Jesse_Robbins">Jesse Robbins</a>, Habitry started a series of <a href="https://www.wikiwand.com/en/Unconference">Unconferences</a> — <b><a href="http://www.motivatesumm.it">The Motivate Summits</a></b> — as a cheap way to surface customer problems and workshop solutions. These open, unscripted gatherings proved to be a fertile ground for exploring the non-technical approaches that health coaches were using, and the great lengths to which they were going to scale their businesses into "the other 167 hours" a week they were not with their clients.</p>
-							<p>We also conducted interviews with clients working with health coaches and people using health coaching apps in lieu of hiring a coach.</p>
+							<p>Using notes from Discovery, we conducted a <b><a href="https://www.researchgate.net/publication/51070630_The_Behaviour_Change_Wheel_a_new_method_for_characterising_and_designing_behaviour_change_interventions">behavioral analysis</a></b> to examine barriers and opportunities to motivate coaches to take action and maximize value from our product.</p>
+																 <table>
+																	 <tbody>
+																		 <tr>
+																			 <td>PSYCHOLOGICAL CAPABILITY</td>
+																			 <td>Coaches lacked information on how to facilitate habit formation in clients. This reduced their confidence in helping clients with behavior change.</td>
+																		 </tr>
+																		 <tr>
+																			 <td>REFLECTIVE MOTIVATION</td>
+																			 <td>Coaches needed to believe in the value of the Habitry iOS app in order to use it to promote habit formation with clients.</td>
+																		 </tr>
+																		 <tr>
+																			 <td>AUTOMATIC MOTIVATION</td>
+																			 <td>Coaches needed to experience success in each session with the app to keep using it.</td>
+																		 </tr>
+																		 <tr>
+																			 <td>PHYSICAL OPPORTUNITY</td>
+																			 <td>Coaches needed enough time in their daily schedule to launch and maintain clients groups on Habitry iOS.</td>
+																		 </tr>
+																		 <td>SOCIAL OPPORTUNITY</td>
+																		 <td>Coaches needed a community of peers to support their motivation to keep using the Habitry iOS app.</td>
+																	 </tr>
+																	 </tbody>
+																 </table>
 					</div>
 					</section>
+
+					<section class="wrapper style1">
+						<div class="inner"</div>
+						<div style="background-color: #b74e91;" class="box">
+							<h2>Design Tactics</h2>
+							<p>We aimed to increase Capability, Motivation, and Opportunity by selecting appropriate <b><a href="https://www.researchgate.net/publication/236064731_The_Behavior_Change_Technique_Taxonomy_v1_of_93_Hierarchically_Clustered_Techniques_Building_an_International_Consensus_for_the_Reporting_of_Behavior_Change_Interventions">Behavior Change Techniques</a>.</b></p>
+
+						</div>
+					</section>
+
+					<section  class="wrapper style1">
+						<div class="inner style1">
+							<span class="image left"><img src="habit-1.png" alt=""/></span>
+
+							<h2>Improving Capability</h2>
+							<p>We helped coaches support client habit formation by automating the behavior change techniques of Goal-Setting, Action Planning, Behavioral Contracts, Feedback on Behavior, Self-Monitoring of Behavior, and Push Notifications (aka the behavior change technique of "Prompts"). </p>
+							<p>We educated coaches on how to create Positive Motivational Climates in their groups with the use of Autonomy Support, Competence Support, and Relatedness Support. This later became our <a href="../essentials">Essentials of Habit Coaching</a> product.</p></p>
+						</div>
+					</section>
+
 
       <!-- Footer -->
   			<footer id="footer" class="wrapper style1">
