--- a/projects/habitryios/index2.html
+++ b/projects/habitryios/index2.html
@@ -102,22 +102,22 @@
 																 <table>
 																	 <tbody>
 																		 <tr>
-																			 <td>PSYCHOLOGICAL CAPABILITY</td>
+																			 <td><b>PSYCHOLOGICAL CAPABILITY</b></td>
 																			 <td>Coaches lacked information on how to facilitate habit formation in clients. This reduced their confidence in helping clients with behavior change.</td>
 																		 </tr>
 																		 <tr>
-																			 <td>REFLECTIVE MOTIVATION</td>
+																			 <td><b>REFLECTIVE MOTIVATION</b></td>
 																			 <td>Coaches needed to believe in the value of the Habitry iOS app in order to use it to promote habit formation with clients.</td>
 																		 </tr>
 																		 <tr>
-																			 <td>AUTOMATIC MOTIVATION</td>
+																			 <td><b>AUTOMATIC MOTIVATION</b></td>
 																			 <td>Coaches needed to experience success in each session with the app to keep using it.</td>
 																		 </tr>
 																		 <tr>
-																			 <td>PHYSICAL OPPORTUNITY</td>
+																			 <td><b>PHYSICAL OPPORTUNITY</b></td>
 																			 <td>Coaches needed enough time in their daily schedule to launch and maintain clients groups on Habitry iOS.</td>
 																		 </tr>
-																		 <td>SOCIAL OPPORTUNITY</td>
+																		 <td><b>SOCIAL OPPORTUNITY</b></td>
 																		 <td>Coaches needed a community of peers to support their motivation to keep using the Habitry iOS app.</td>
 																	 </tr>
 																	 </tbody>
@@ -140,7 +140,20 @@
 
 							<h2>Improving Capability</h2>
 							<p>We helped coaches support client habit formation by automating the behavior change techniques of Goal-Setting, Action Planning, Behavioral Contracts, Feedback on Behavior, Self-Monitoring of Behavior, and Push Notifications (aka the behavior change technique of "Prompts"). </p>
-							<p>We educated coaches on how to create Positive Motivational Climates in their groups with the use of Autonomy Support, Competence Support, and Relatedness Support. This later became our <a href="../essentials">Essentials of Habit Coaching</a> product.</p></p>
+							<p>We educated coaches on how to create Positive Motivational Climates in their groups with the use of Autonomy Support, Competence Support, and Relatedness Support. This later became our <a href="../essentials">Essentials of Habit Coaching</a> product.</p>
+						</div>
+					</section>
+
+					<section  class="wrapper style1">
+						<div class="inner style1">
+							<span class="image left"><img src="habit-2.png" alt=""/></span>
+
+							<h2>Improving Motivation</h2>
+								<p>The next step was to improve Motivation.</p>
+
+								<p>We helped coaches to get started with as little fuss as possible by designing a great onboarding experience (Shaping Knowledge, Goal-Setting, Valued Self-Identity), habits to use with clients (Shaping Knowledge).
+
+								<p>We also built an analytics system that generated insights (Feedback on Behavior & Re-attrbition) so they could better manage their groups.</p>
 						</div>
 					</section>
 
