--- a/projects/habitryios/index2.html
+++ b/projects/habitryios/index2.html
@@ -157,6 +157,27 @@
 						</div>
 					</section>
 
+					<section  class="wrapper style1">
+						<div class="inner style1">
+							<span class="image titleimg left"><img src="motivatenyc2.jpg" alt=""/></span>
+
+							<h2>Improving Opportunity</h2>
+								<p>The final step was to improve  Opportunity.</p>
+
+								<p>We created the Motivate Collective to provide Social Support, Shape Knowledge, and create a Valued Self-Identity for health coaches as MOTIVATORS. At it's peak, there were 600+ members in the Motivate Collective.</p>
+						</div>
+					</section>
+
+					<section class="wrapper style1">
+						<div class="inner"</div>
+						<div style="background-color: #b74e91;" class="box">
+							<span class="image titleimg right"><img src="push.jpg" width=alt=""/></span>
+							<h2>Killer Feature: Motivating Push Notifications</h2>
+							<p>In testing, it became obvious that the make-or-break feature of the mobile app woud be push notifications. Coaches and their clients had both mentioned them frequently in discovery, and in 2014 people weren't quite sick of them yet.</p>
+							<p>In order to make sure we got it right, Omar looked at the research on creating motivating push notifications from Self-Determination Theory. Then he went a step further and recreated one of the study protocols. He and Steven M. Ledbetter wrote about the lessons from this experiment in <b><a href="http://habitry.link/push">How to Design Motivating Push Notifications.</a></b></p>
+
+						</div>
+					</section>
 
       <!-- Footer -->
   			<footer id="footer" class="wrapper style1">
