--- a/projects/habitryios/index2.html
+++ b/projects/habitryios/index2.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Omar Ganai</title>
+		<title>Omar Ganai — Projects — Habitry iOS</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -18,15 +18,16 @@
 	<body>
 
 		<!-- Header -->
-			<header id="header">
-				<a href="../" class="title">Omar Ganai</a>
-				<nav>
-					<ul>
-						<li><a href="../">Home</a></li>
-						<li><a class="active" href="../bio">Bio</a></li>
-					</ul>
-				</nav>
-			</header>
+		<header id="header">
+			<a href="../../" class="title">Omar Ganai</a>
+			<nav>
+				<ul>
+					<li><a href="../../">Home</a></li>
+					<li><a href="../../#projects">Projects</a></li>
+					<li><a class="active" href="#">Habitry iOS</a></li>
+				</ul>
+			</nav>
+		</header>
 
 		<!-- Wrapper -->
 			<div id="wrapper">
@@ -177,6 +178,39 @@
 							<p>In order to make sure we got it right, Omar looked at the research on creating motivating push notifications from Self-Determination Theory. Then he went a step further and recreated one of the study protocols. He and Steven M. Ledbetter wrote about the lessons from this experiment in <b><a href="http://habitry.link/push">How to Design Motivating Push Notifications.</a></b></p>
 
 						</div>
+					</section>
+
+					<section id="three" class="wrapper style1">
+						<div class="inner">
+						<div class="row">
+									<!-- Text -->
+										<div class="4u">
+											<h2>The Product</h2>
+										</div>
+									 <div class="8u$">
+										 <iframe width="560" height="315" src="https://www.youtube.com/embed/qxDGcA4vSX4?showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+									 </div>
+						</div>
+
+
+					</div>
+					</section>
+					<section id="three" class="wrapper style1">
+						<div class="inner">
+						<div class="row">
+									<!-- Text -->
+										<div class="4u">
+											<h2>Results</h2>
+										</div>
+									 <div class="8u$">
+										 <p>At it's peak, Habitry iOS had more than 1,000 users on the platform. Health coaches were making an average of $3,000 per month on the app and clients were checking in with 72% daily adherence and 68% stuck around for a full 365 days.</p>
+										 <iframe width="560" height="315" src="https://www.youtube.com/embed/MK0PZ2uAd9E" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+
+									 </div>
+						</div>
+
+
+					</div>
 					</section>
 
       <!-- Footer -->
