--- a/projects/habitryios/index.html
+++ b/projects/habitryios/index.html
@@ -46,7 +46,7 @@
 								<div class="row">
 											<!-- Text -->
 												<div class="3u">
-												<span class="image"><img src="habitry-logo.png" width=alt=""/></span>
+												<span class="image left"><img src="habitry-logo.png" width=alt=""/></span>
 											 </div>
 											 <div class="9u$">
 													 <h2>The Mission</h2>
@@ -242,7 +242,7 @@
 							</section>
 
 
-							
+
 
 						</div>
 
