--- a/projects/habitryios/index.html
+++ b/projects/habitryios/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE HTML>
 <!--
 	Hyperspace by HTML5 UP
@@ -6,7 +7,7 @@
 -->
 <html>
 	<head>
-		<title>Omar Ganai</title>
+		<title>Omar Ganai — Projects — HabitryiOS</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -46,7 +47,7 @@
 								<div class="row">
 											<!-- Text -->
 												<div class="3u">
-												<span class="image left"><img src="habitry-logo.png" width=alt=""/></span>
+												<span class="image"><img src="habitry-logo.png"/></span>
 											 </div>
 											 <div class="9u$">
 													 <h2>The Mission</h2>
@@ -55,7 +56,6 @@
 													 <p>Our central hypothesis was that the most effective and efficient way to help clients change their health behavior was in groups. However health coaches had no tools to work in groups online that preserved their high-touch, one-on-one approach.</p>
 											 </div>
 								</div>
-
 
 							</div>
 							</section>
@@ -88,7 +88,7 @@
 								<div class="row">
 											<!-- Text -->
 												<div class="3u">
-												<span class="image titleimg"><img src="vision.jpg" width=alt=""/></span>
+												<span class="image titleimg"><img src="vision.jpg" /></span>
 											 </div>
 											 <div class="9u$">
 													 <h2>The Approach</h2>
@@ -104,7 +104,7 @@
 								<div class="row">
 											<!-- Text -->
 												<div class="3u">
-												<span class="image titleimg"><img src="motivatenyc.jpg" width=alt=""/></span>
+												<span class="image titleimg"><img src="motivatenyc.jpg" alt=""/></span>
 											 </div>
 											 <div class="9u$">
 													 <h2>Discovery</h2>
@@ -180,7 +180,7 @@
 								<div class="row">
 											<!-- Text -->
 												<div class="3u">
-												<span class="image"><img src="habit-1.png" width=alt=""/></span>
+												<span class="image"><img src="habit-1.png" alt=""/></span>
 											 </div>
 											 <div class="9u$">
 													 <h2>Improving Capability</h2>
@@ -197,7 +197,7 @@
 								<div class="row">
 											<!-- Text -->
 												<div class="3u">
-												<span class="image"><img src="habit-2.png" width=alt=""/></span>
+												<span class="image"><img src="habit-2.png" alt=""/></span>
 											 </div>
 											 <div class="9u$">
 													 <h2>Improving Motivation</h2>
@@ -213,7 +213,7 @@
 								<div class="row">
 											<!-- Text -->
 												<div class="3u">
-												<span class="image titleimg"><img src="motivatenyc2.jpg" width=alt=""/></span>
+												<span class="image titleimg"><img src="motivatenyc2.jpg" alt=""/></span>
 											 </div>
 											 <div class="9u$">
 													 <h2>Improving Opportunity</h2>
@@ -229,7 +229,7 @@
 								<div class="row">
 											<!-- Text -->
 												<div class="3u">
-												<span class="image titleimg"><img src="push.jpg" width=alt=""/></span>
+												<span class="image titleimg"><img src="push.jpg" alt=""/></span>
 											 </div>
 											 <div class="9u$">
 													 <h2>A Killer Feature</h2>
@@ -241,7 +241,38 @@
 							</div>
 							</section>
 
+							<section id="three" class="wrapper style1">
+								<div class="inner">
+								<div class="row">
+											<!-- Text -->
+												<div class="4u">
+													<h2>Product</h2>
+												</div>
+											 <div class="8u$">
+												 <iframe width="560" height="315" src="https://www.youtube.com/embed/qxDGcA4vSX4?showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+											 </div>
+								</div>
 
+
+							</div>
+							</section>
+							<section id="three" class="wrapper style1">
+								<div class="inner">
+								<div class="row">
+											<!-- Text -->
+												<div class="4u">
+													<h2>Results</h2>
+												</div>
+											 <div class="8u$">
+												 <p>At it's peak, Habitry iOS had more than 1,000 users on the platform. Health coaches were making an average of $3,000 per month on the app and clients were checking in with 72% daily adherence and 68% stuck around for a full 365 days.</p>
+												 <iframe width="560" height="315" src="https://www.youtube.com/embed/MK0PZ2uAd9E" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+
+											 </div>
+								</div>
+
+
+							</div>
+							</section>
 
 
 						</div>
