--- a/projects/habitryios/index.html
+++ b/projects/habitryios/index.html
@@ -47,7 +47,7 @@
 								<div class="row">
 											<!-- Text -->
 												<div class="3u">
-												<span class="image"><img src="habitry-logo.png"/></span>
+												<span class="image left"><img src="habitry-logo.png"/></span>
 											 </div>
 											 <div class="9u$">
 													 <h2>The Mission</h2>
