--- a/projects/habitryios/index.html
+++ b/projects/habitryios/index.html
@@ -94,11 +94,11 @@
 					</div>
 					</section>
 
-					<section  class="wrapper style1">
+					<section  class="wrapper style1 fullscreen">
 						<div class="inner">
 							<h2>Design for Motivation & Behavior Change</h2>
 							<p>Using notes from Discovery, we conducted a <b><a href="https://www.researchgate.net/publication/51070630_The_Behaviour_Change_Wheel_a_new_method_for_characterising_and_designing_behaviour_change_interventions">behavioral analysis</a></b> to examine barriers and opportunities to motivate coaches to take action and maximize value from our product.</p>
-							<span class="image"><img src="comb.png" alt=""/></span>
+							<span class="image fit"><img src="comb.png" alt=""/></span>
 
 																 <table>
 																	 <tbody>
