--- a/projects/habitryios/index.html
+++ b/projects/habitryios/index.html
@@ -192,8 +192,8 @@
 										<div class="4u">
 											<h2>The Product</h2>
 										</div>
-									 <div class="8u$ embed-responsive embed-responsive-16by9">
-										 <iframe width="560" height="315" src="https://www.youtube.com/embed/qxDGcA4vSX4?showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+									 <div class="8u">
+										 <iframe width="800px" height="450px" src="https://www.youtube.com/embed/qxDGcA4vSX4?showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 									 </div>
 						</div>
 
@@ -207,9 +207,9 @@
 										<div class="4u">
 											<h2>Results</h2>
 										</div>
-									 <div class="8u$ embed-responsive embed-responsive-16by9">
+									 <div class="8u$">
 										 <p>At it's peak, Habitry iOS had more than 1,000 users on the platform. Health coaches were making an average of $3,000 per month on the app and clients were checking in with 72% daily adherence and 68% stuck around for a full 365 days.</p>
-										 <iframe width="560" height="315" src="https://www.youtube.com/embed/MK0PZ2uAd9E" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+										 <iframe width="800px" height="450px" src="https://www.youtube.com/embed/MK0PZ2uAd9E" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 
 									 </div>
 						</div>
