--- a/projects/habitryios/index.html
+++ b/projects/habitryios/index.html
@@ -193,6 +193,7 @@
 											<h2>The Product</h2>
 										</div>
 									 <div class="8u">
+										 <p>With 19 Motivate Summits in 18 months and some user testing tools, we were able to watch users interact with our product and refine it. Here is the first version. <p>
 										 <iframe width="800px" height="450px" src="https://www.youtube.com/embed/qxDGcA4vSX4?showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 									 </div>
 						</div>
