--- a/projects/habitryios/index.html
+++ b/projects/habitryios/index.html
@@ -120,7 +120,7 @@
 																		 </tr>
 																		 <tr>
 																			 <td style="background-color: #00b342;"><b>PHYSICAL OPPORTUNITY</b></td>
-																			 <td>Coaches needed enough time in their daily schedule to launch and maintain clients groups on Habitry iOS.</td>
+																			 <td>Coaches needed enough time in their daily schedule to launch and maintain client groups on Habitry iOS.</td>
 																		 </tr>
 																		 <td style="background-color: #00b342;"><b>SOCIAL OPPORTUNITY</b></td>
 																		 <td>Coaches needed a community of peers to support their motivation to keep using the Habitry iOS app.</td>
