--- a/projects/habitryios/index.html
+++ b/projects/habitryios/index.html
@@ -97,9 +97,9 @@
 					<section  class="wrapper style1 fullscreen">
 						<div class="inner">
 							<h2>Design for Motivation & Behavior Change</h2>
-							<p>Using notes from Discovery, we conducted a <b><a href="https://www.researchgate.net/publication/51070630_The_Behaviour_Change_Wheel_a_new_method_for_characterising_and_designing_behaviour_change_interventions">behavioral analysis</a></b> to examine barriers and opportunities to motivate coaches to take action and maximize value from our product.</p>
+							<p>Using notes from Discovery, we conducted a <b><a href="https://www.researchgate.net/publication/51070630_The_Behaviour_Change_Wheel_a_new_method_for_characterising_and_designing_behaviour_change_interventions">behavioral analysis</a></b> to examine barriers and opportunities to motivate coaches to take action and maximize success  from using our product. The diagram below was inspired by Dustin DiTomasso and Amy Bucher of mad*pow.</p>
 							<span class="image fit"><img src="comb.png" alt=""/></span>
-
+														<p>Capability, Motivation, and Opportunity have two aspects each, which we targetted with design tactics.</p>
 																 <table>
 																	 <tbody>
 																		 <tr>
@@ -108,11 +108,11 @@
 																		 </tr>
 																		 <tr>
 																			 <td style="background-color: #e0402b;"><b>PHYSICAL CAPABILITY</b></td>
-																			 <td>Not applicable.</td>
+																			 <td>—</td>
 																		 </tr>
 																		 <tr>
 																			 <td style="background-color: #f88432;"><b>REFLECTIVE MOTIVATION</b></td>
-																			 <td>Coaches needed to believe in the value of the Habitry iOS app to use it.</td>
+																			 <td>Coaches needed feel the value of the Habitry iOS app to use it.</td>
 																		 </tr>
 																		 <tr>
 																			 <td style="background-color: #f88432;"><b>AUTOMATIC MOTIVATION</b></td>
@@ -159,7 +159,7 @@
 
 								<p>We helped coaches to get started with as little fuss as possible by designing a great onboarding experience (Shaping Knowledge, Goal-Setting, Valued Self-Identity), habits to use with clients (Shaping Knowledge).
 
-								<p>We also built an analytics system that generated insights (Feedback on Behavior & Re-attrbition) so they could better manage their groups.</p>
+								<p>We also built an analytics system that generated insights (Feedback on Behavior & Re-attribition) so they could better manage their groups.</p>
 						</div>
 					</section>
 
